--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CONNECTION_STRING = mongodb+srv://admin:admin@cluster0.nqsyq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+CONNECTION_STRING = mongodb+srv://test:1234567890@cluster0.egj00.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 DB_NAME =jr-cms-13
 JWT_KEY = secret
