--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "cms-> content management system",
   "main": "index.js",
   "scripts": {
+    "start": "pm2 index.js",
     "dev": "nodemon index.js",
     "debug": "nodemon --inspect index.js",
     "test": "jest",
@@ -21,7 +22,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "~5.1.0"
   },
   "devDependencies": {
     "jest": "^27.0.4",
