--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "cms-> content management system",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 index.js",
+    "start": "pm2 start index.js --name jrCMS",
+    "poststart": "pm2 log jrCMS",
+    "stop": "pm2 stop jrCMS",
     "dev": "nodemon index.js",
     "debug": "nodemon --inspect index.js",
     "test": "jest",
