--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CONNECTION_STRING = mongodb+srv://test:1234567890@cluster0.egj00.mongodb.net/
+CONNECTION_STRING = mongodb://mongo/
 DB_NAME =jr-cms-13
 JWT_KEY = secret
